<resources>
    <string name="app_name">Dog API</string>
    <string name="please_sign_in">Please Sign In.</string>
    <string name="username"> Username:</string>
    <string name="enter_username">Enter Username</string>
    <string name="password">Password:</string>
    <string name="enter_password">Enter Password</string>
    <string name="submit">Submit</string>
    <string name="title_activity_breed">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="testing">TESTING</string>
    <string name="Terrier">Terrier</string>
    <string name="spaniel">Spaniel</string>
    <string name="retriever">Retriever</string>
    <string name="poodle">Poodle</string>
</resources>
